# SentinelFS

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  COMPREHENSIVE_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  COPILOT_README.md  DB_MODULE_COMPLETE.md  DEAD_CODE_ANALYSIS.md  DEAD_CODE_COMPREHENSIVE_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_STATUS.md  HMMMMMMMMMMMMMM  IMPROVEMENTS.md  IMPROVEMENTS_V2.md  INSTALL.md  LICENSE  PLUGIN_GUIDE.md  PRODUCTION_INTEGRATION_COMPLETE.md  README.md  REFACTORING_PHASE1.md  REFACTORING_PHASE2.md  REFACTORING_PLAN.md  ROADMAP.md  SPRINT1_COMPLETE.md  SPRINT2_COMPLETE.md  SPRINT3_COMPLETE.md  SPRINT5_COMPLETE.md  SPRINT6_COMPLETE.md  SPRINT_14_REPORT.md  SUNUM_SENARYOSU.md  TODO.md  build.sh  build_advanced_ml.sh  insert_files_correct.sql  insert_files_final.sql  insert_files_with_datetime.sql  netfalcon_vs_network.md  package-lock.json  (+21 more)
SentinelFS/app/daemon/: CMakeLists.txt  DaemonCore.h  MetricsServer.cpp  sentinel_daemon.cpp
SentinelFS/core/: CMakeLists.txt  README.md
SentinelFS/core/include/: BatchQueries.h  Constants.h  DatabaseManager.h  DatabaseMigrations.h  ErrorCodes.h  IFileAPI.h  INetworkAPI.h  IStorageAPI.h  MergeResolver.h
SentinelFS/core/src/: DatabaseManager.cpp  DatabaseMigrations.cpp  ErrorCodes.cpp  MergeResolver.cpp
SentinelFS/plugins/ironroot/: CMakeLists.txt
SentinelFS/plugins/netfalcon/: CMakeLists.txt
SentinelFS/plugins/network/: CMakeLists.txt
SentinelFS/plugins/zer0/: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  sprint2_test.cpp  sprint3_simple_test.cpp  sprint3_test.cpp  sprint4_test.cpp  sprint5_test.cpp  sprint6_test.cpp
app/cli/: CMakeLists.txt  placeholder.cpp  sentinel_cli.cpp
app/daemon/: CMakeLists.txt  DaemonCore.cpp  DaemonCore.h  DeltaSerialization.h  DeltaSyncProtocolHandler.cpp  DeltaSyncProtocolHandler.h  EventHandlers.cpp  EventHandlers.h  FileSyncHandler.cpp  FileSyncHandler.h  IPCHandler.cpp  IPCHandler.cpp.bak  IPCHandler.h  MetricsServer.h  placeholder.cpp  sentinel_daemon.cpp  sentinel_daemon_new.cpp  sentinel_daemon_old.cpp
app/daemon/core/: DaemonLifecycle.cpp  PluginLoader.cpp  WatchManager.cpp
app/daemon/ipc/: IPCHandler.cpp  IPCHandler.h
core/: .copilot  CMakeLists.txt  plugin_api.h
core/auto_remesh/: CMakeLists.txt  auto_remesh.cpp  auto_remesh.h  network_metrics.cpp  network_metrics.h  peer_scorer.cpp  peer_scorer.h
core/config/: config.cpp  config.h
core/delta_engine/: CMakeLists.txt  delta_engine.cpp  delta_engine.h  delta_types.cpp  delta_types.h
core/event_bus/: event_bus.cpp  event_bus.h
core/file_api/: file_api.h  file_api_impl.cpp  file_api_impl.h  snapshot_engine.cpp  snapshot_engine.h
core/include/: BandwidthLimiter.h  Config.h  Constants.h  DBHelper.h  DeltaEngine.h  HealthReport.h  IFileAPI.h  INetworkAPI.h  IPlugin.h  IStorageAPI.h  PluginLoader.h  Result.h  SocketGuard.h  Version.h  Version.h.in  placeholder.h
core/logger/: logger.cpp  logger.h
core/network/include/: AutoRemeshManager.h  BandwidthLimiter.h  DeltaSync.h
core/network/src/: AutoRemeshManager.cpp  BandwidthLimiter.cpp  DeltaEngine.cpp  DeltaSync.cpp  NetworkManager.cpp
core/peer_registry/: CMakeLists.txt  peer_registry.cpp  peer_registry.h
core/plugin_loader/: plugin_loader.cpp  plugin_loader.h
core/security/include/: Crypto.h  KeyManager.h
core/security/src/: Crypto.cpp  KeyManager.cpp  TLSContext.cpp.bak
core/src/: BandwidthLimiter.cpp  Config.cpp  Crypto.cpp  DeltaEngine.cpp  EventBus.cpp  PluginLoader.cpp  placeholder.cpp
core/storage/src/: FileVersionManager.cpp
core/sync/include/: ConflictResolver.h  DeltaSyncProtocolHandler.h  EventHandlers.h  FileSyncHandler.h
core/sync/src/: ConflictResolver.cpp  DeltaSerialization.cpp  DeltaSyncProtocolHandler.cpp  EventHandlers.cpp  FileSyncHandler.cpp
core/utils/include/: Config.h  EventBus.h  HealthEndpoint.h  Logger.h  MetricsCollector.h  PathUtils.h  PluginManager.h  SHA256.h
core/utils/src/: Config.cpp  DBHelper.cpp  EventBus.cpp  HealthEndpoint.cpp  Logger.cpp  MetricsCollector.cpp  PathUtils.cpp  PluginManager.cpp
ml_demo/: CMakeLists.txt  sentinelfs-neo  simple_ml_demo  simple_ml_demo.cpp
plugins/examples/hello_plugin/: CMakeLists.txt  hello_plugin.cpp
plugins/falconstore/: CMakeLists.txt  README.md
plugins/falconstore/include/: FalconStore.h  QueryBuilder.h
plugins/falconstore/src/: FalconStore.cpp
plugins/filesystem/: .copilot  CMakeLists.txt  FileHasher.cpp  FileHasher.h  InotifyWatcher.cpp  filesystem_plugin.cpp  filesystem_plugin_new.cpp
plugins/filesystem/include/: IFileWatcher.h  InotifyWatcher.h
plugins/filesystem/src/: FSEventsWatcher.cpp  InotifyWatcher.cpp  filesystem_plugin.cpp
plugins/ml/: .copilot  AnomalyDetector.cpp  CMakeLists.txt  ml_plugin.cpp
plugins/network/: .copilot  CMakeLists.txt  HandshakeProtocol.cpp  TCPHandler.cpp  TCPHandler.h  UDPDiscovery.cpp  UDPDiscovery.h  network_plugin.cpp  network_plugin_old.cpp
plugins/storage/: CMakeLists.txt  ConflictManager.cpp  ConflictManager.h  FileMetadataManager.cpp  FileMetadataManager.h  PeerManager.cpp  SQLiteHandler.cpp  storage_plugin.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  TODO-TEST.md  autoremsh_integ_test.cpp  autoremsh_test.cpp  bandwidth_limiter_test.cpp  delta_test.cpp  discovery_test.cpp  filesystem_test.cpp  placeholder_test.cpp  storage_test.cpp  transfer_test.cpp  watcher_test.cpp
tests/integration/: common_mocks.h  network_integration_test.cpp  sync_integration_test.cpp  test_offline_sync.cpp  test_peer_lifecycle.cpp
tests/unit/: MockPlugins.h  autoremsh_integ_test.cpp  discovery_test.cpp  test_anomaly_detector.cpp  test_auto_remesh.cpp  test_bandwidth_limiter.cpp  test_config.cpp  test_crypto.cpp  test_delta_serialization.cpp  test_delta_sync.cpp  test_file_sync_handler.cpp  test_fs_watchers.cpp  test_handshake_protocol.cpp  test_logger.cpp  test_network_manager.cpp  test_offline_queue.cpp  test_plugin_manager.cpp  test_sha256.cpp  test_storage_managers.cpp  test_tcp_handler.cpp  test_threadpool.cpp  test_udp_discovery.cpp  test_utils.cpp
(+642 files in other folders)
